lib/kitt/tmpl/extsvc/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: __SERVICE_NAME__
  namespace: __NAMESPACE__
subsets:
- addresses:
  - ip: __SERVER_ADDR__
  ports:
  - protocol: TCP
    port: __SERVER_PORT__
