lib/kitt/tmpl/extsvc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __SERVICE_NAME__
  namespace: __NAMESPACE__
spec:
  ports:
  - protocol: TCP
    port: __INTERNAL_PORT__
    targetPort: __SERVER_PORT__
